--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "firebase": "^9.6.1",
+    "firebase-admin": "^10.0.1",
     "hbs": "^4.2.0",
     "html": "^1.0.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "uuid": "^8.3.2"
   }
 }
